# monocypher

./: Makefile  monocypher.cabal  stack.yaml
bench/: Bench.hs
src/: Monocypher.c  Monocypher.hs
src/Monocypher/: Context.hs  Internal.hsc  Types.hsc
test/: MonocypherSpec.hs
