name:                  monocypher
version:               0.1.0.0
synopsis:              Pending.
homepage:              https://github.com/brendanhay/monocypher
bug-reports:           https://github.com/brendanhay/monocypher/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2017 Brendan Hay
category:              Cryptography
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/monocypher.git

library
    default-language: Haskell2010
    hs-source-dirs:   src

    ghc-options:      -Wall -Wincomplete-uni-patterns

    exposed-modules:
          Monocypher
          Monocypher.Internal

    other-modules:

    build-depends:
          base     >= 4.7 && < 5
        , inline-c == 0.5.6.*

        , bytestring
        , containers

    cc-options:       -Wall -O2

    include-dirs:
          cbits

    includes:
          cbits/monocypher.h

    c-sources:
          cbits/monocypher.c

test-suite doctest
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          DocTest.hs
    hs-source-dirs:   test

    ghc-options:      -Wall -Wincomplete-uni-patterns

    build-depends:
          base
        , doctest
        , doctest-discover

test-suite spec
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test

    ghc-options:      -Wall -Wincomplete-uni-patterns

    other-modules:
        MonocypherSpec

    build-depends:
          base
        , hspec

benchmark bench
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    hs-source-dirs:   bench

    ghc-options:      -Wall -Wincomplete-uni-patterns

    build-depends:
          base
        , criterion
